<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".log.register"
    android:background="#42f4cb">

    <TextView
        android:id="@+id/textGrid"
        android:text="@string/register"
        android:textSize="34dp"
        android:layout_centerInParent="true"
        android:textColor="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="40dp"
        android:paddingTop="30dp"
        />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        android:maxLines="1">

        <EditText
            android:id="@+id/RegEmail"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:maxLines="1"
            android:background="@drawable/edittextstyle"
            android:hint="@string/email"
            android:textColor="#fff"
            android:textColorHint="#fff" />

        <EditText
            android:id="@+id/RegPword"
            android:layout_width="299dp"
            android:layout_height="66dp"
            android:layout_gravity="center"
            android:background="@drawable/edittextstyle"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingTop="10dp"
            android:textColor="#fff"
            android:textColorHint="#fff" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/password_must_be_at_least_10_characters_with_no_spaces"
            android:textColor="#fff"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/password_must_have_at_least_one_capital_letter"
            android:textColor="#fff"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/password_must_have_at_least_one_number"
            android:textColor="#fff"
            android:textStyle="bold"
            />


        <Button
            android:id="@+id/RegBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/buttonstyleselector"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/LoginBk"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/return_to_login"
            android:textColor="#fff"
            android:textSize="20dp" />

    </LinearLayout>

    </android.support.constraint.ConstraintLayout>